--- a/view/adminhtml/web/css/adminhtml_system_config_edit.css
+++ b/view/adminhtml/web/css/adminhtml_system_config_edit.css
@@ -70,185 +70,85 @@
 
 /* ==================================== SupportTab - Default styling ==================================== */
 
-#section { float: left; width: 100%; clear: both; }
-#supporttab { margin-left: 4rem;  }
-#supporttab #section { border-bottom: 1px solid #cccccc; }
-#supporttab #section:last-child { border-bottom: none; }
-
-/* Default styling collapsible tabs */
-.collapse-title[aria-expanded=true] h3:before {
-    font-family:'Admin Icons';
-    content: '\e615';
-
+h3.bk-h3 {
+    font-size: 1.5em;
+    margin: 28px 0 10px;
 }
-.collapse-title h3:before {
-    font-family:'Admin Icons';
-    font-weight: lighter;
-    content: '\e616';
-    padding-right: 10px;
-    -webkit-font-smoothing: antialiased;
+.bk-hr-line {
+    height: 1px;
+    color: #ccc;
+    background-color: #ccc;
+    border: none;
+    padding: 0;
+    margin: 28px 0 10px;
 }
-
-.collapse-content {
-    box-sizing: border-box;
-    padding:0 15px 15px 15px;
-    height:auto !important;
-    float:left; width: 100%;
+.bk-supported-versions {
+    max-width: 300px;
+}
+.bk-installed-version {
+    max-width: 450px;
+}
+.bk-flex-basis-33 {
+    flex-basis: 33.33%; 
 }
 
-#supporttab h3 {
-    font-size: 1.7rem;
-    margin:0 !important;
-    padding:1.9rem 2.7rem 1.9rem 1rem;
-    color: black;
-    font-weight: 600;
-    cursor: pointer;
+.bk-flex-basis-66 {
+    flex-basis: 66.66%; 
 }
 
-#supporttab h4 {
-    font-size: 1.1em;
-    margin:20px 0 5px 0;
-    padding:0;
-    color: rgba(0,136,204,1);
+.bk-flex-basis-50 {
+    flex-basis: 50%; 
 }
 
-#supporttab p {
-    line-height: 2em;
+.bk-mb-5px {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 5px;
+}
+.bk-mt-10px {
+    margin: 0;
+    padding: 0;
+    margin-top: 10px;
 }
 
-#supporttab ol, ul {
-    margin-left: 20px;
-    position :relative;
-}
-
-#supporttab ul li {
-    line-height: 2em;
-    list-style-type: none;
-    margin-bottom: 10px;
-}
-
-#buckaroo_magento2_buckaroo_magento2_account_section_buckaroo_magento2_advanced .comment {
-    color: red;
-}
-
-/* ==================================== SupportTab - 3rd Party | Version compatibility ==================================== */
-
-/* activate Beta */
-/*
-#buckaroo_magento2_buckaroo_magento2_support_section-head:after,
-#buckaroo_magento2_buckaroo_magento2_account_section-head:after,
-#buckaroo_magento2_buckaroo_magento2_payment_section-head:after,
-#buckaroo_magento2_buckaroo_magento2_refund_section-head:after {
-    color:#db1200;
-    content: 'Beta';
-    text-transform: uppercase;
-    font-size:10px;
-    margin-left:3px;
-    position :absolute;
-    font-weight:lighter;
-}
-*/
-
-.block-version h3 {
-    cursor: auto !important;
-}
-
-.block-version {
-    padding:10px;
-    background: #F8F8F8;
-    float:left;
-    width: 100%;
-}
-
-.php-check-icon {
-    height: 16px;
-    width: 16px;
-    position: absolute;
-    right: 15px;
-    margin-top: 5px;
-}
-
-@media screen and (min-width: 1200px){
-    .block-version {
-        float:left;
-        width: 50%;
-    }
-}
-#supporttab .version-compatibility {
-    float:left;
-    width: calc(100% - 30px);
-    clear:both;
-}
-#supporttab .version-compatibility li {
-    clear: both;
-    margin-bottom: 15px;
-    float:left;
-    width: 100%;
-}
-#supporttab .version-compatibility  span.text {
-     font-weight: 600;
-     float:left;
-     width: calc(50% - 20px);
- }
-#supporttab .version-compatibility  span.version {
-    float:left;
-    width: calc(50% - 30px);
-    text-align:right;
+.bk-ml-10px {
+    margin: 0;
+    padding: 0;
     margin-left: 10px;
 }
 
-/* ==================================== SupportTab - Quick guide ==================================== */
-
-#supporttab ol {
-    margin-left: 40px;
+.bk-installed-version  p {
+   margin: 0;
+   padding: 0;
 }
-
-#supporttab ol li {
-    list-style-type: upper-roman;
-    line-height: 2em;
+a.bk-btn {
+    background: #d2ce27;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: #fff;
+    display: inline-block;
 }
-
-#supporttab ol li ol {
-    margin-bottom: 10px;
+a.bk-btn:hover {
+    text-decoration:none;
+    color: #fefefe;
 }
-
-#supporttab ol li ol li {
-    list-style-type: lower-alpha;
+.bk-flex {
+    display: flex;
 }
-
-/* ==================================== SupportTab - Support ==================================== */
-
-.buckaroo_logo, .buckaroo_logo {
-    padding:10px 10px 10px 0;
+.bk-flex-between {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-.buckaroo_logo img { width: 180px; }
-.buckaroo_logo img { width: 50px; }
-
-.support-buck-magento2 ul {
-    float:left;
-    width:100%;
-    clear:both;
+.bk-plugin-zone {
+    text-decoration: none;
 }
-
-.support-buck-magento2 li.first {
-    font-weight :600;
-    width: 300px;
+.bk-plugin-zone-wrap {
+    max-width: 400px;
 }
-.support-buck-magento2 li.last {
-    width: 200px;
-}
-
-.support-buck-magento2 li.first,
-.support-buck-magento2 li.last {
-    line-height: normal;
-    float:left;
-}
-
-/* ==================================== SupportTab - Documentation ==================================== */
-
-.external_link {
+.bk-php-compatibility {
+    max-height: 17px;
     margin-left: 5px;
-    vertical-align: middle;
 }
 
 /* ==================================== SupportTab - Error message ==================================== */
@@ -264,13 +164,6 @@
 }
 
 /* ==================================== Payment Methods - Legend ==================================== */
-
-/*#block {*/
-    /*margin-bottom: 30px;*/
-    /*float: left;*/
-    /*width: 100%;*/
-    /*clear: both;*/
-/*}*/
 
 .section-config.with-button.buckaroo_magento2-section .config-heading strong { font-weight: normal; }
 .buckaroo_magento2-section .button-container { float:right; }
