--- a/view/frontend/templates/checkout/cart/paypal-express.phtml
+++ b/view/frontend/templates/checkout/cart/paypal-express.phtml
@@ -32,8 +32,7 @@
     <script>
         showPaypalExpressButton = function() {
             require(['jquery', 'buckaroo/paypal-express/pay'], function(jQuery, paypalExpressPay) {
-                paypalExpressPay.setConfig(<?= /* @noEscape */ json_encode($block->getConfig()); ?>);
-                paypalExpressPay.setPage('cart');
+                paypalExpressPay.setConfig(<?= /* @noEscape */ json_encode($block->getConfig()); ?>, 'cart');
                 paypalExpressPay.init();
             });
         }
