--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -86,26 +86,33 @@
 
     <hr class="bk-hr-line">
     <h3 class="bk-h3"><?= $block->escapeHtml(__('Additional plugins:'));?></h3>
-    <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
-        <a href="https://github.com/buckaroo-it/Magento2_SecondChance" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
-            <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/68ba0c08-1162-44c6-a18a-8734692b8b02" alt="<?= $block->escapeHtml('Second chance module');?>">
-        </a>
-        <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('The Second Chance module makes it possible to follow up unpaid orders with one or two reminder emails. This extension to the Buckaroo Payment module ensures a higher conversion rate.'));?></p>
-    </div>
-    <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
+    <div class="bk-flex bk-mb-5px bk-flex-wrap">
+        <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
+            <a href="https://github.com/buckaroo-it/Magento2_SecondChance" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+                <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/68ba0c08-1162-44c6-a18a-8734692b8b02" alt="<?= $block->escapeHtml('Second chance module');?>">
+            </a>
+            <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('The Second Chance module makes it possible to follow up unpaid orders with one or two reminder emails. This extension to the Buckaroo Payment module ensures a higher conversion rate.'));?></p>
+        </div>
+        <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
 
-        <a href="https://github.com/buckaroo-it/Magento2" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
-            <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/11953f16-3f5d-4c10-bb6b-f9a949a97a7a" alt="<?= $block->escapeHtml('Hyvä React Checkout module');?>">
-        </a>
-        <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Hyvä offers the best performance and user experience, without the cost and overhead of a PWA.'));?></p>
+            <a href="https://docs.buckaroo.io/docs/hyva-react-checkout-module" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+                <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/11953f16-3f5d-4c10-bb6b-f9a949a97a7a" alt="<?= $block->escapeHtml('Hyvä React Checkout module');?>">
+            </a>
+            <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Hyvä offers the best performance and user experience, without the cost and overhead of a PWA.'));?></p>
+        </div>
+        <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
+            <a href="https://docs.buckaroo.io/docs/graphql-module" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+                <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/8611dfeb-bb84-4ba6-ab72-7b6459143dff" alt="<?= $block->escapeHtml('GraphQL');?>">
+            </a>
+            <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Buckaroo GraphQL module adds GraphQL to provide an alternative to REST and SOAP web APIs for frontend development.'));?></p>
+        </div>
+        <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
+            <a href="https://docs.buckaroo.io/v1/docs/google-analytics-module" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+                <img src="https://www.buckaroo.nl/media/3478/magento2_googleanalytics_icon.png" alt="<?= $block->escapeHtml('Analytics module');?>">
+            </a>
+            <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Improves tracking allocation across various devices and browsers'));?></p>
+        </div>       
     </div>
-    <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
-        <a href="https://docs.buckaroo.io/v1/docs/magento-2-releases" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
-            <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/8611dfeb-bb84-4ba6-ab72-7b6459143dff" alt="<?= $block->escapeHtml('GraphQL');?>">
-        </a>
-        <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Buckaroo GraphQL module adds GraphQL to provide an alternative to REST and SOAP web APIs for frontend development.'));?></p>
-    </div>
-
 
     <hr class="bk-hr-line">
     <h3 class="bk-h3"><?= $block->escapeHtml(__('Account:'));?></h3>
