BP-2372 General information -contribution + move secret key

--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -131,4 +131,11 @@
         <?= $block->escapeHtml(__('Contact us'));?>
     </a>
 
+    <hr class="bk-hr-line">
+    <h3 class="bk-h3"><?= $block->escapeHtml(__('Contribute:'));?></h3>
+    <p class="bk-mb-5px"><?= $block->escapeHtml(__('Do you see room for improvement? We look forward to your input! Via Github you can submit a feature request or submit a pull request yourself with your proposed adjustments.'));?></p>
+
+    <a href="https://github.com/buckaroo-it/Magento2/blob/master/CONTRIBUTING.md" target="_blank" class="bk-btn">
+        <?= $block->escapeHtml(__('Contribute'));?>
+    </a>
 </div>
