BP-2840 PayByBank improvements

--- a/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
@@ -14,7 +14,7 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img style="width:40px;" data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/'+getCode().replace('buckaroo_magento2_','')+'.gif') }" />
+                <img style="width:40px;" data-bind="attr: { src: logo() }" />
             </div>
         </div>
     </div>
