--- a/view/adminhtml/layout/sales_order_create_load_block_billing_method.xml
+++ b/view/adminhtml/layout/sales_order_create_load_block_billing_method.xml
@@ -20,6 +20,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="order.create.billing.method.form">
+            <arguments>
+                <argument name="ppe_customer_details" xsi:type="object">Buckaroo\Magento2\ViewModel\PpeCustomerDetails</argument>
+            </arguments>
             <action method="setMethodFormTemplate">
                 <argument name="method" xsi:type="string">buckaroo_magento2_payperemail</argument>
                 <argument name="template" xsi:type="string">Buckaroo_Magento2::sales/order/create/billingmethod/payperemail.phtml</argument>
