BP-2574 - Save Bank Transfer/IDEAL Payment Information in the magento 2 order

--- a/view/adminhtml/templates/info/payment_method.phtml
+++ b/view/adminhtml/templates/info/payment_method.phtml
@@ -58,3 +58,24 @@ if ($method = $block->getPayPerEmailMethod()) {?>
         <?php echo $block->escapeHtml($block->getMethod()->getTitle()) ?>
     </div>
 </div>
+
+<?php if ($specificPaymentDetails = $block->getSpecificPaymentDetails()) : ?>
+    <div class="bk-payment-wrap">
+        <?php foreach ($specificPaymentDetails as $label => $value) : ?>
+            <?= $block->escapeHtml($label) ?>:
+            <?= $block->escapeHtml(implode(' ', $block->getValueAsArray($value))) ?>
+            <br>
+        <?php endforeach; ?>
+    </div>
+<?php endif; ?>
+
+<?php if ($specificPaymentDetails = $block->getSpecificInformation()) : ?>
+    <div class="bk-payment-wrap">
+        <?php foreach ($specificPaymentDetails as $label => $value) : ?>
+            <?= $block->escapeHtml($label) ?>:
+            <?= $block->escapeHtml(implode(' ', $block->getValueAsArray($value))) ?>
+            <br>
+        <?php endforeach; ?>
+    </div>
+<?php endif; ?>
+
