BP-2574 - Save Bank Transfer/IDEAL Payment Information in the magento 2 order FIXES

--- a/view/adminhtml/templates/info/payment_method.phtml
+++ b/view/adminhtml/templates/info/payment_method.phtml
@@ -69,6 +69,17 @@ if ($method = $block->getPayPerEmailMethod()) {?>
     </div>
 <?php endif; ?>
 
+<p>TESTTSTTTTT</p>
+
+<?php
+try {
+    $specificPaymentDetails = $block->getSpecificInformation();
+    var_dump($specificPaymentDetails, true);
+} catch (\Exception $exception) {
+    var_dump($exception->getMessage(), true);
+}
+?>
+
 <?php if ($specificPaymentDetails = $block->getSpecificInformation()) : ?>
     <div class="bk-payment-wrap">
         <?php foreach ($specificPaymentDetails as $label => $value) : ?>
