BP-2576 - Update E-mail on payperemail

--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="field required" >
-                        <label class="label" for="buckaroo_magento2_payperemail_Email"> <span data-bind="i18n: 'Email:'"> </span> </label>
+                        <label class="label" for="buckaroo_magento2_payperemail_Email"> <span data-bind="i18n: 'E-mail:'"> </span> </label>
                         <div class="control">
                             <input id="buckaroo_magento2_payperemail_Email"
                                    type="text"
