BP-3082 Add financial warning for the use of BNPL methods

--- a/view/frontend/web/template/payment/buckaroo_magento2_billink.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_billink.html
@@ -165,6 +165,10 @@
                         </div>
                     </div>
 
+                    <!-- ko if: showFinancialWarning  -->
+                        <span data-bind="i18n: `Je moet minimaal 18+ zijn om deze dienst te gebruiken. Als je op tijd betaalt, voorkom je extra kosten en zorg je dat je in de toekomst nogmaals gebruik kunt maken van de diensten van ${getTitle()}. Door verder te gaan, accepteer je de Algemene Voorwaarden en bevestig je dat je de Privacyverklaring en Cookieverklaring hebt gelezen.`">  </span>
+                    <!-- /ko -->
+                    
                     <div class="field">
                         <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
                     </div>
